unpackaged/main/default/objects/Enquiry_Standard__c/Enquiry_Standard__c.object-meta.xml
<CustomObject>
    <label>Enquiry Standard</label>
    <nameField>
        <displayFormat>ESID-{00}</displayFormat>
        <label>Enquiry Standards ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enquiry Standards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>