unpackaged/main/default/objects/Enquiry_Standard__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Standards</relationshipLabel>
    <relationshipName>Enquiry_Standards</relationshipName>
    <type>Lookup</type>
</CustomField>