unpackaged/main/default/objects/Enquiry_Standard__c/fields/Standard__c.field-meta.xml
<CustomField>
    <fullName>Standard__c</fullName>
    <label>Standard</label>
    <referenceTo>Standard__c</referenceTo>
    <relationshipLabel>Enquiry Standards</relationshipLabel>
    <relationshipName>Enquiry_Standards</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>