unpackaged/main/default/objects/Enquiry_Standard__c/fields/Standard_Name__c.field-meta.xml
<CustomField>
    <fullName>Standard_Name__c</fullName>
    <formula>Standard__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standard Name</label>
    <type>Text</type>
</CustomField>