unpackaged/main/default/objects/Enquiry_Standard__c/fields/Standards_link__c.field-meta.xml
<CustomField>
    <fullName>Standards_link__c</fullName>
    <formula>Standard__r.Standard_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Standards link</label>
    <type>Text</type>
</CustomField>